tests/invalid_programs/for4.jas
// Expect '{' before for loop body.

for i in 1..10 println(i); }
